--- a/Front-end/src/app/views/pages/register/register.component.html
+++ b/Front-end/src/app/views/pages/register/register.component.html
@@ -4,24 +4,24 @@
       <c-col lg="7" md="9" xl="6">
         <c-card class="mx-4">
           <c-card-body class="p-4">
-            <form cForm>
+            <form cForm action="/save" >
               <h1>Register</h1>
               <p class="text-medium-emphasis">Create your account</p>
               <c-input-group class="mb-3">
                 <span cInputGroupText>
                   <svg cIcon name="cilUser"></svg>
                 </span>
-                <input autoComplete="name" [(ngModel)]="employeename" [ngModelOptions]="{standalone: true}" cFormControl placeholder="Username" />
+                <input autoComplete="name"  name="nom" cFormControl placeholder="Username" />
               </c-input-group>
               <c-input-group class="mb-3">
                 <span cInputGroupText>@</span>
-                <input autoComplete="email" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" cFormControl placeholder="Email" />
+                <input autoComplete="email" name="email"  cFormControl placeholder="Email" />
               </c-input-group>
               <c-input-group class="mb-3">
                 <span cInputGroupText>
                   <svg cIcon name="cilLockLocked"></svg>
                 </span>
-                <input autoComplete="new-password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" cFormControl placeholder="Password" type="password" />
+                <input autoComplete="new-password" name="password"   cFormControl placeholder="Password" type="password" />
               </c-input-group>
               <c-input-group class="mb-4">
                 <span cInputGroupText>
@@ -30,7 +30,7 @@
                 <input autoComplete="new-password" cFormControl placeholder="Repeat password" type="password" />
               </c-input-group>
               <div class="d-grid">
-                <button cButton color="success" (click)="save()">Create Account</button>
+                <button type="submit" cButton color="success" (click)="save()">Create Account</button>
               </div>
             </form>
           </c-card-body>
